--- a/style.css
+++ b/style.css
@@ -292,11 +292,11 @@ a:hover, a:active, a:focus {
 .container {
   max-width: 1160px;
   margin: 0 auto;
-  padding: 0 5%;
+  padding: 32px 5%;
 }
 @media (min-width: 1160px) {
   .container {
-    padding: 0;
+    padding-inline: 0;
     width: 90%;
   }
 }
@@ -356,6 +356,49 @@ ul {
   white-space: nowrap;
   width: 100%;
   -webkit-touch-callout: none;
+}
+.nav-wrapper-desktop .button-otypo,
+.button-otypo {
+  border-radius: 8px;
+  font-weight: 600;
+  text-transform: none;
+  font-size: 13px;
+  line-height: 16px;
+  height: 42px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: .02em;
+  overflow: hidden;
+  padding: 0 24px;
+  position: relative;
+  transition: all .15s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+.nav-wrapper-desktop .button-secondary-light,
+.button-secondary-light {
+  background-color: #b6ecf6;
+  color: #06272d;
+}
+.nav-wrapper-desktop .button-secondary-light:hover, .nav-wrapper-desktop .button-secondary-light:focus, .nav-wrapper-desktop .button-secondary-light:active,
+.button-secondary-light:hover, .button-secondary-light:focus, .button-secondary-light:active {
+  background-color: #d2f3f9;
+  color: #06272d;
+  text-decoration: none;
+}
+.nav-wrapper-desktop .button-tertiary,
+.button-tertiary {
+  background-color: #fddcc5;
+  color: #06272d;
+}
+.nav-wrapper-desktop .button-tertiary:hover, .nav-wrapper-desktop .button-tertiary:focus, .nav-wrapper-desktop .button-tertiary:active,
+.button-tertiary:hover, .button-tertiary:focus, .button-tertiary:active  {
+  background-color: #ffad69;
+  color: #06272d;
+  text-decoration: none;
 }
 @media (min-width: 768px) {
   .button, .pagination-next-link, .pagination-prev-link, .pagination-first-link, .pagination-last-link, .subscriptions-subscribe button, .requests-table-toolbar .organization-subscribe button, .community-follow button, .article-subscribe button, .section-subscribe button, .split-button button {
@@ -627,7 +670,7 @@ ul {
 }
 .header .wrapper {
   position: relative;
-  max-width: 1160px;
+  /* max-width: 1160px; */
   margin: 0 auto;
   padding: 0 5%;
   height: 71px;
@@ -637,14 +680,14 @@ ul {
 }
 @media (min-width: 1160px) {
   .header .wrapper{
-    padding: 0;
-    width: 90%;
+    padding: 0 20px;
+    /* width: 90%; */
   }
 }
 
 .logo {
   display: flex;
-  gap: 8px;
+  gap: 16px;
   align-items: center;
 }
 
@@ -660,6 +703,10 @@ ul {
 .logo a {
   display: inline-block;
   color: inherit;
+}
+
+.logo .help-center-link {
+  margin-top: 10px;
 }
 
 .logo a:hover, .logo a:focus, .logo a:active {
@@ -693,15 +740,19 @@ ul {
 .user-nav[aria-expanded=true] > .user-nav-list li {
   display: block;
 }
+.user-nav > .user-nav-list li + li {
+  margin-left: 8px;
+}
 .user-nav[aria-expanded=true] > .user-nav-list a {
   display: block;
   margin: 20px;
 }
-
+.links-nav-list,
 .user-nav-list {
   display: block;
   list-style: none;
 }
+.links-nav-list > li,
 .user-nav-list > li {
   display: inline-block;
 }
@@ -718,7 +769,9 @@ ul {
 }
 @media (min-width: 1024px) {
   .nav-wrapper-desktop {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    gap: 8px;
   }
 }
 .nav-wrapper-desktop a {
@@ -745,7 +798,6 @@ ul {
 }
 .nav-wrapper-desktop .user-info > button {
   color: white;
-  border-bottom: 1px solid transparent;
 }
 .nav-wrapper-desktop .user-info > button:hover,
 .nav-wrapper-desktop .user-info > button:focus,
@@ -760,6 +812,7 @@ ul {
   }
 }
 .nav-wrapper-mobile .menu-button-mobile {
+  color: inherit;
   background: none;
   border: 0;
   width: auto;
@@ -774,7 +827,7 @@ ul {
   border-radius: 50%;
 }
 .nav-wrapper-mobile .menu-button-mobile[aria-expanded=true] .icon-menu {
-  background: #f3f3f3;
+  background: rgba(0, 0, 0, .25)
 }
 .nav-wrapper-mobile .menu-list-mobile {
   position: absolute;
@@ -900,11 +953,19 @@ ul {
   }
 }
 .user-info > button {
-  border: 0;
-  color: $link_color;
-  min-width: 0;
-  padding: 0;
-  white-space: nowrap;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 16px;
+  height: 42px;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  padding: 8px 16px;
+  transition: all .3s;
+  font-size: 13px;
+  font-weight: 600;
 }
 .user-info > button:hover, .user-info > button:focus {
   color: $link_color;
@@ -990,12 +1051,203 @@ ul {
   color: lighten($text_color, 20%);
   display: inline-block;
 }
-
+.powered-by-zendesk {
+  display: none;
+}
 .powered-by-zendesk a,
 .powered-by-zendesk a:visited {
   color: lighten($text_color, 20%);
 }
 
+footer.footer-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  background-color: #fff;
+  border-top: 1px solid #c2d3d6;
+  padding-bottom: 16px;
+  position: relative;
+  z-index: 4;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+.footer-section .logos {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex: 0 100%;
+  justify-content: space-between;
+}
+.footer-section .logos .logos-slider {
+  display: flex;
+  overflow: hidden;
+  padding-block: 16px;
+  position: relative;
+}
+.footer-section .logos .logos-slider::after {
+  border-bottom: 1px solid #c2d3d6;
+  content: "";
+  inset: auto 16px 0;
+  position: absolute;
+}
+.footer-section .logos .lists-container {
+  display: inline-flex;
+  white-space: nowrap;
+  width: 1800px;
+}
+.footer-section .logos .lists-container:not(.--slide-me) .logos-list {
+  left: 0;
+  margin: auto;
+  min-width: auto;
+  position: relative;
+}
+.footer-section .logos .logos-list {
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+}
+.footer-section .logos .logos-list .slide {
+  padding-inline: 36px;
+  text-align: center;
+}
+.footer-section .navigation {
+  text-align: center;
+  flex: 1 1;
+  padding: 8px;
+  padding-left: 16px;
+}
+.footer-section .navigation .links {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: start;
+}
+.footer-section .navigation .links .country-selector {
+  margin-right: 16px;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+.footer-section .navigation .links .country-selector .dropdown-toggle {
+  align-items: center;
+  background-color: #fff;
+  border: 1px solid #c2d3d6;
+  border-radius: 6px;
+  cursor: pointer;
+  display: flex;
+  gap: 8px;
+  height: 42px;
+  padding: 0 32px 0 16px;
+  position: relative;
+  text-transform: capitalize;
+  width: 100%;
+  z-index: 2;
+}
+.footer-section .navigation .links .country-selector .dropdown-toggle .icon {
+  color: #497a83;
+  cursor: auto;
+  position: absolute;
+  right: 12px;
+  z-index: 2;
+}
+.icon-arrow-drop-down::after {
+  content: "";
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 5px 5px 0 5px;
+  border-color: #497a83 transparent transparent transparent;
+}
+.footer-section .navigation .links .country-selector .dropdown-toggle .custom-image,
+.footer-section .navigation .links .country-selector .dropdown-list .custom-image {
+  filter: drop-shadow(0 1px 3px rgba(0, 0, 0, .3019607843));
+  display: flex;
+  overflow: hidden;
+  position: relative;
+}
+.footer-section .navigation .links .country-selector .dropdown-toggle span {
+  display: none;
+}
+.footer-section .navigation .links .country-selector .dropdown-list {
+  display: flex;
+  flex-direction: column;
+  max-height: 250px;
+  opacity: 1;
+  overflow-y: auto;
+  z-index: 1000;
+}
+.footer-section .navigation .links .country-selector .dropdown-list .rich-select-option {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  flex: none;
+  gap: 8px;
+  height: 42px;
+  padding: 0 16px;
+  text-transform: capitalize;
+}
+.footer-section .navigation .links .country-selector .dropdown-list .rich-select-option + .rich-select-option {
+  border-top: 1px solid #c2d3d6;
+}
+.footer-section .navigation .links .country-selector .dropdown-list .rich-select-option:hover {
+  background-color: #f0f8fa;
+}
+.footer-section .navigation .links .country-selector .dropdown-list .rich-select-option a {
+    align-items: center;
+    display: flex;
+    gap: 8px;
+    height: 42px;
+    text-decoration: none;
+    color: inherit;
+}
+.footer-section .navigation .links .link {
+  align-items: center;
+  border-radius: 0;
+  color: #093a44;
+  display: flex;
+  font-size: 13px;
+  height: 42px;
+  letter-spacing: 0;
+  line-height: 16px;
+  padding: 0;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+.footer-section .navigation .action-link {
+  cursor: pointer;
+  text-decoration-line: underline;
+}
+.footer-section .navigation .links .separator {
+  border-left: 1px solid #c2d3d6;
+  display: inline-block;
+  height: 12px;
+  line-height: 12px;
+  margin: 0 16px;
+}
+.footer-section .infos {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 8px;
+  align-items: end;
+  flex: none;
+  padding-right: 16px;
+  width: auto;
+}
+.footer-section .infos .note {
+  color: #093a44;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 0;
+  padding-top: 16px;
+  text-align: right;
+  line-height: normal;
+}
 /***** Breadcrumbs *****/
 .breadcrumbs {
   margin: 0 0 15px 0;
@@ -1028,12 +1280,14 @@ ul {
 }
 
 .search {
-  border-color: #87929D;
+  border-color: #c2d3d6;
   border-radius: 30px;
+  border-radius: 6px;
   border-style: solid;
   border-width: 1px;
   display: flex;
   position: relative;
+  margin-inline: 16px;
   transition: border 0.12s ease-in-out;
 }
 .search:focus-within {
@@ -1042,7 +1296,7 @@ ul {
 .search input[type=search],
 .search .clear-button {
   background-color: #fff;
-  border-radius: 30px;
+  border-radius: inherit;
   border: none;
 }
 .search-full input[type=search], .search-full .clear-button {
@@ -1052,13 +1306,18 @@ ul {
   appearance: none;
   -webkit-appearance: none;
   box-sizing: border-box;
-  color: #666;
   flex: 1 1 auto;
-  height: 40px;
   width: 100%;
+  background-color: #fff;
+  color: #06272d;
+  font-size: 17px;
+  font-weight: 400;
+  height: 42px;
+  letter-spacing: .02em;
+  padding: 0 32px 0 16px;
 }
 .search input[type=search]:focus {
-  color: #555;
+  color: #06272d;
 }
 .search input[type=search]::-webkit-search-decoration, .search input[type=search]::-webkit-search-cancel-button, .search input[type=search]::-webkit-search-results-button, .search input[type=search]::-webkit-search-results-decoration {
   -webkit-appearance: none;
@@ -1075,6 +1334,7 @@ ul {
   flex: none;
   justify-content: center;
   padding: 0 15px;
+  z-index: 1;
 }
 .search .clear-button:hover {
   background-color: $brand_color;
@@ -1089,8 +1349,7 @@ ul {
 }
 
 [dir=ltr] .search input[type=search] {
-  padding-left: 40px;
-  padding-right: 20px;
+  padding-inline: 16px 32px
 }
 [dir=ltr] .search-has-value input[type=search] {
   border-bottom-right-radius: 0;
@@ -1110,8 +1369,7 @@ ul {
 }
 
 [dir=rtl] .search input[type=search] {
-  padding-left: 20px;
-  padding-right: 40px;
+  padding-inline: 32px 16px
 }
 [dir=rtl] .search-has-value input[type=search] {
   border-bottom-left-radius: 0;
@@ -1135,31 +1393,42 @@ ul {
   top: 50%;
   transform: translateY(-50%);
   position: absolute;
-  left: 15px;
+  right: 15px;
   z-index: 1;
   width: 18px;
   height: 18px;
   color: #777;
   pointer-events: none;
+  margin-right: 16px;
 }
 [dir=rtl] .search-icon {
-  left: auto;
-  right: 15px;
+  right: auto;
+  left: 15px;
 }
 
 /***** Hero component *****/
 .hero {
-  background-image: url($homepage_background_image);
-  background-position: center;
-  background-size: cover;
-  height: 300px;
+  position: relative;
+  background-color: #f0f8fa;
+  border-bottom: 1px solid #c2d3d6;
+  height: 150px;
   padding: 0 20px;
   text-align: center;
   width: 100%;
 }
-.hero-inner {
+.hero-title {
   position: relative;
   top: 50%;
+  transform: translateY(-50%);
+  font-size: 31px;
+  font-weight: 600;
+  letter-spacing: .03em;
+  color: #06272d;
+}
+.hero-inner {
+  position: absolute;
+  top: 100%;
+  inset: 100% 0 auto 0;
   transform: translateY(-50%);
   max-width: 610px;
   margin: 0 auto;
@@ -1407,7 +1676,7 @@ ul {
 .community,
 .activity {
   border-top: 1px solid #ddd;
-  padding: 30px 0;
+  padding: 32px 0;
 }
 
 /***** Recent activity *****/
@@ -1465,7 +1734,7 @@ ul {
   font-size: 13px;
 }
 .recent-activity-item-comment {
-  padding-left: 5px;
+  display: none;
 }
 [dir=rtl] .recent-activity-item-comment {
   padding: 0 5px 0 0;
@@ -2654,11 +2923,15 @@ ul {
 .post {
   flex: 1;
   margin-bottom: 10px;
+  background: white;
+  padding: 24px 16px;
+  border: 1px solid #c2d3d6;
 }
 @media (min-width: 1024px) {
   .post {
     flex: 1 0 70%;
-    max-width: 70%;
+    min-width: 640px;
+    max-width: 800px;
   }
 }
 .post-container {
@@ -2668,6 +2941,7 @@ ul {
 @media (min-width: 1024px) {
   .post-container {
     flex-direction: row;
+    gap: 24px;
   }
 }
 .post-header {
@@ -2878,10 +3152,15 @@ ul {
 @media (min-width: 1024px) {
   .post-sidebar {
     border: 0;
-    flex: 1 0 30%;
-    padding: 0 0 0 50px;
+    padding: 0;
     text-align: initial;
+    flex: 0 0 324px;
+    height: 100%;
+    max-width: 324px;
+    padding-left: 24px;
+    border-left: 1px solid #c2d3d6
   }
+
   [dir=rtl] .post-sidebar {
     padding: 0 50px 0 0;
   }
@@ -4223,19 +4502,24 @@ ul {
 }
 @media (min-width: 1024px) {
   .search-results {
-    flex-direction: row;
+    flex-direction: row-reverse;
+    gap: 24px;
   }
 }
 .search-results-column {
   flex: 1;
+  background: white;
+  padding: 24px 16px;
+  border: 1px solid #c2d3d6;
 }
 @media (min-width: 1024px) {
   .search-results-column {
-    flex: 0 0 75%;
+    flex: 1 0 66%;
+    min-width: 640px;
+    max-width: 800px;
   }
 }
 .search-results-sidebar {
-  border-top: 1px solid #ddd;
   flex: 1 0 auto;
   margin-bottom: 20px;
   padding: 0;
@@ -4245,6 +4529,11 @@ ul {
     border: 0;
     flex: 0 0 20%;
     height: auto;
+    flex: 0 0 324px;
+    height: 100%;
+    max-width: 324px;
+    padding-left: 24px;
+    border-left: 1px solid #c2d3d6
   }
 }
 .search-results-sidebar .sidenav-item {
@@ -4610,7 +4899,7 @@ html[dir=rtl] .notification-left-aligned {
   left: 0;
   margin-top: 1px;
   min-width: 170px;
-  padding: 10px 0;
+  padding: 0;
   position: absolute;
   text-align: left;
   z-index: 1000;
