--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -1,13 +1,13 @@
 <h1 class="visibility-hidden">{{ help_center.name }}</h1>
 
 <section id="main-content" class="section hero">
+  <h2 class="hero-title">Haben Sie eine Frage zu Otypo?</h2>
   <div class="hero-inner">
-    <h2 class="visibility-hidden">{{ t 'search' }}</h2>
     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon" aria-hidden="true">
       <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
       <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
     </svg>
-    {{search submit=false instant=settings.instant_search class='search search-full'}}
+    {{search submit=false instant=settings.instant_search class='search search-full' placeholder='Suchen...'}}
   </div>
 </section>
 
@@ -64,7 +64,7 @@
     {{/if}}
   </section>
 
-  {{#if help_center.community_enabled}}
+  {{!-- {{#if help_center.community_enabled}}
     <section class="section home-section community">
       <h2>{{t 'community'}}</h2>
       {{#link 'community' class='community-link'}}
@@ -73,7 +73,7 @@
 
       <div class="community-image"></div>
     </section>
-  {{/if}}
+  {{/if}} --}}
 
   <section class="section home-section activity">
     {{#if settings.show_recent_activity}}
